# TranscriptionProject

./: README.md  launch_ui.py  pyproject.toml  requirements.txt
scripts/: run_transcription.py
src/transcriber/: __init__.py  cli.py  exporters.py  pipeline.py  types.py  ui.py
tests/: test_exporters.py
